# caliper

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOGFOOD-FINDINGS.md  Dockerfile  Dockerfile.dogfood  Dockerfile.test  LICENSE  Makefile  README.md  REBRAND-HANDOFF.md  WHY.md  action.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json  tsconfig.json
.caliper/: adversarial-ledger.md  gitleaks.toml
.eedom/: adversarial-ledger.md  code_graph.sqlite
.eedom/reports/: dogfood-20260424-124732.sarif  dogfood-report-20260424-124732.md
.entire/: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/agents/: release-manager.agent.md
.github/instructions/: caliper-review.instructions.md  python.instructions.md
.github/workflows/: build-container.yml  dogfood.yml  foreman.yml  gatekeeper.yml  release-candidate.yml  release-please.yml  workflow-policy.yml
config/: scan-exclusions.toml
docs/: CAPABILITIES.md  architecture-cloud.md  architecture-enterprise.md  architecture-plan-v1.md  architecture-plan-v2.md  detectors.md  elevator-pitch.md  part.md  plugin-sdk.md
docs/adr/: 001-agent-module-as-separate-entry-point.md  005-github-actions-update-vetting-policy.md  006-detect-then-enrich.md  006-detect-then-scribe.md  007-supply-chain-version-diff.md  008-llm-review-sealed-between-pure-functions.md
docs/llm-review/: findings_external.md  findings_internal.md  llm_review_build_spec.md
docs/plugins/: quality.md  security.md
docs/reviews/: adversarial-2026-06-22.json  adversarial-2026-06-22.md  adversarial-2026-06-30.json  adversarial-2026-06-30.md  grounded-full-20-2026-06-22.json  grounded-full-20-2026-06-22.md  grounded-vs-baseline-2026-06-22.json  grounded-vs-baseline-2026-06-22.md  grounding-conclusions-2026-06-22.md  haiku-vs-sonnet-2026-06-22.json  haiku-vs-sonnet-2026-06-22.md
docs/schema/: report-v1.0.json
examples/example-plugin/: README.md
policies/: INPUT_SCHEMA.md  policy.rego  policy_supply_chain_test.rego  policy_test.rego
scripts/: bootstrap_alternatives.py  build-image.sh  build-push.sh  build-test.sh  build.sh  build_part_ui.sh  caliper-runner-healthcheck.service  caliper-runner-healthcheck.timer  codebase-stats.py  com.caliper.runner-healthcheck.plist  cutlist_report.py  dogfood.sh  dup-scan.sh  gauntlet.py  generate-pr-comment.py  install-local.sh  resolve-base-digests.sh  runner-healthcheck.sh  scan.sh  screenshots.ts  smart_commit.sh  solve-issues.py  stress-test-real.py  stress-test-runner.py  sync_scan_exclusions.py  try-caliper-on-pr.sh  verify-checksums.sh  verify-scanners.sh
tests/: conftest.py
(+635 files in other folders)
