[project]
name = "eedom"
version = "0.2.25"
description = "Eagle Eyed Dom — fully deterministic dependency and code review for CI"
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sam Fakhreddine", email = "sambou@gmail.com"},
]
keywords = ["security", "code-review", "dependency-review", "sarif", "ci", "devsecops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.4.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "structlog==26.1.0",
    "httpx==0.28.1",
    "orjson==3.11.9",
    "packaging==26.2",
    "jinja2==3.1.6",
    "pyyaml==6.0.3",
    "rich==15.0.0",
]

[project.optional-dependencies]
db = [
    "psycopg[binary]==3.3.4",
    "psycopg-pool==3.3.1",
]
parquet = [
    "pyarrow==24.0.0",
]
copilot = [
    "agent-framework-github-copilot==1.0.0rc1",
    "starlette==1.3.1",
    "uvicorn==0.49.0",
]
watch = [
    "watchdog==6.0.0",
]
all = [
    "eedom[db,parquet,copilot,watch]",
]

[project.scripts]
eedom = "eedom.cli.main:cli"

[project.urls]
Homepage = "https://github.com/gitrdunhq/eedom"
Repository = "https://github.com/gitrdunhq/eedom"
Changelog = "https://github.com/gitrdunhq/eedom/blob/main/CHANGELOG.md"
Issues = "https://github.com/gitrdunhq/eedom/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eedom"]
artifacts = ["**/*.j2"]
only-include = ["src/eedom"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "black==26.5.1",
    "ruff==0.15.16",
    "respx==0.23.1",
    "hypothesis==6.155.2",
    "packaging==26.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "E501", "SIM117", "SIM105", "SIM102", "B017", "B905", "F841"]
"src/eedom/detectors/**/*.py" = ["SIM102", "SIM110", "SIM105", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["eedom"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "contract: pure API contract tests that run without scanner binaries, network, or containers",
]
